--- a/FirstLesson/index_JS.html
+++ b/FirstLesson/index_JS.html
@@ -61,7 +61,26 @@ expression3;
 
 </p>
 
+<br>
 
+<p>
+
+variabla -> container (nume+valoare+schimbata)
+
+// azAZ_09
+
+var titlu = "JavaScript pentru incepatori";
+var autorul_anului = "Necunoscut Ion";
+var anul = 2018;
+var pagini = 150;
+var pret = 34.56;
+
+
+alert( titlu );
+alert( autorul_anului );
+
+
+</p>
 
 
 
