--- a/FirstLesson/index_JS.html
+++ b/FirstLesson/index_JS.html
@@ -71,7 +71,7 @@ variabla -> container (nume+valoare+schimbata)
 
 var titlu = "JavaScript pentru incepatori";
 var autorul_anului = "Necunoscut Ion";
-var anul = 2018;
+const ANUL = 2018;
 var pagini = 150;
 var pret = 34.56;
 
