--- a/initiation/restaurant.html
+++ b/initiation/restaurant.html
@@ -35,3 +35,11 @@ alert(
 
 
 </script>
+
+// pe acasa
+1) cat combustibil este in rezervor - 15L
+2) Cat costa un litru
+3) Pana la cat trebuie sa se umple rezervorul
+
+a) Cati listri s-au turnat in rezervor
+b) Cat costa?
